--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,7 @@
 	background-color: white;
 	color: black;
 	padding: 2px;
-	width: 100%;
+	width: 80%;
 }
 
 .my-gallery-block img {
@@ -67,6 +67,7 @@
 	margin-bottom: 3rem;
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 400;
+	font-size: 1.5rem;
 }
 
 .starsAndCat{
@@ -82,4 +83,5 @@
 
 .stars{
 	font-size: 2rem;
+	margin-top: 2rem;
 }
