--- a/src/style.scss
+++ b/src/style.scss
@@ -18,6 +18,10 @@
 	width: 80%;
 }
 
+.container-all{
+	margin-top: 9rem;
+}
+
 .my-gallery-block img {
 	max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
 	height: auto; /* Mantiene la proporción de la imagen */
@@ -74,14 +78,15 @@
 	display: flex;
     flex-direction: column;
     justify-content: space-around;
+	margin-top: 9rem;
 }
 
 .categories{
 	font-size: 2rem;
     text-transform: uppercase;
+	margin-bottom: 2rem;
 }
 
 .stars{
 	font-size: 2rem;
-	margin-top: 2rem;
 }
